ベンチマーク結果の詳細な出力を追加し、GPUおよびCPU処理のパフォーマンス比較を強化

--- a/can_gpu_benchmark_fixed.ipynb
+++ b/can_gpu_benchmark_fixed.ipynb
@@ -148,10 +148,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "cell-6",
    "metadata": {},
-   "outputs": [],
-   "source": "# デコーダーの初期化\noptimized_gpu_decoder = OptimizedGPUCANDecoder(batch_size=500_000, chunk_size=1)\ncpu_decoder = CPUCANDecoder(batch_size=100_000)\n\n# ベンチマーク結果格納\nbenchmark_results = []\n\nfor n_messages in test_sizes:\n    print(f\"\\n--- {n_messages:,} メッセージの処理 ---\")\n    \n    # データ生成\n    timestamps, addresses, data_bytes = generate_synthetic_can_data(n_messages)\n    data_size_mb = (timestamps.nbytes + addresses.nbytes + data_bytes.nbytes) / (1024**2)\n    print(f\"データサイズ: {data_size_mb:.1f} MB\")\n    \n    # GPU処理（最適化）\n    opt_gpu_start = time.time()\n    opt_gpu_chunk_results = optimized_gpu_decoder.decode_batch(timestamps, addresses, data_bytes)\n    opt_gpu_time = time.time() - opt_gpu_start\n    \n    # CPU処理（大きいデータは時間がかかるため制限）\n    if n_messages <= 100_000:\n        cpu_start = time.time()\n        cpu_results = cpu_decoder.decode_batch(timestamps, addresses, data_bytes)\n        cpu_time = time.time() - cpu_start\n    else:\n        # 線形推定\n        cpu_time = benchmark_results[-1]['cpu_time'] * (n_messages / benchmark_results[-1]['n_messages'])\n    \n    # 結果記録\n    result = {\n        'n_messages': n_messages,\n        'data_size_mb': data_size_mb,\n        'opt_gpu_time': opt_gpu_time,\n        'cpu_time': cpu_time,\n        'speedup': cpu_time / opt_gpu_time,\n        'opt_gpu_throughput': n_messages / opt_gpu_time / 1e6,\n        'cpu_throughput': n_messages / cpu_time / 1e6\n    }\n    benchmark_results.append(result)\n    \n    print(f\"GPU処理時間: {opt_gpu_time:.4f}秒 ({result['opt_gpu_throughput']:.1f} Mmsg/s)\")\n    print(f\"CPU処理時間: {cpu_time:.4f}秒 ({result['cpu_throughput']:.1f} Mmsg/s)\")\n    print(f\"高速化率: {result['speedup']:.1f}x\")\n\n# DataFrameに変換\nbenchmark_df = pd.DataFrame(benchmark_results)\nbenchmark_df"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- 10,000 メッセージの処理 ---\n",
+      "データサイズ: 0.2 MB\n",
+      "  NumPy連結: 0.0004秒\n",
+      "  cuDF作成: 0.0045秒\n",
+      "  型変換: 0.0100秒\n",
+      "  フィルタリング: 0.0111秒\n",
+      "  16bit復元: 0.0088秒\n",
+      "  結果DataFrame: 0.0586秒\n",
+      "  ソート: 0.0009秒\n",
+      "  総処理時間: 0.0947秒\n",
+      "GPU処理時間: 0.0948秒 (0.1 Mmsg/s)\n",
+      "CPU処理時間: 0.0021秒 (4.7 Mmsg/s)\n",
+      "高速化率: 0.0x\n",
+      "\n",
+      "--- 50,000 メッセージの処理 ---\n",
+      "データサイズ: 1.1 MB\n",
+      "  NumPy連結: 0.0022秒\n",
+      "  cuDF作成: 0.0047秒\n",
+      "  型変換: 0.0004秒\n",
+      "  フィルタリング: 0.0014秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0184秒\n",
+      "  ソート: 0.0008秒\n",
+      "  総処理時間: 0.0313秒\n",
+      "GPU処理時間: 0.0317秒 (1.6 Mmsg/s)\n",
+      "CPU処理時間: 0.0053秒 (9.5 Mmsg/s)\n",
+      "高速化率: 0.2x\n",
+      "\n",
+      "--- 100,000 メッセージの処理 ---\n",
+      "データサイズ: 2.3 MB\n",
+      "  NumPy連結: 0.0022秒\n",
+      "  cuDF作成: 0.0047秒\n",
+      "  型変換: 0.0004秒\n",
+      "  フィルタリング: 0.0013秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0174秒\n",
+      "  ソート: 0.0009秒\n",
+      "  総処理時間: 0.0303秒\n",
+      "GPU処理時間: 0.0306秒 (3.3 Mmsg/s)\n",
+      "CPU処理時間: 0.0098秒 (10.2 Mmsg/s)\n",
+      "高速化率: 0.3x\n",
+      "\n",
+      "--- 500,000 メッセージの処理 ---\n",
+      "データサイズ: 11.4 MB\n",
+      "  NumPy連結: 0.0113秒\n",
+      "  cuDF作成: 0.0261秒\n",
+      "  型変換: 0.0004秒\n",
+      "  フィルタリング: 0.0013秒\n",
+      "  16bit復元: 0.0031秒\n",
+      "  結果DataFrame: 0.0176秒\n",
+      "  ソート: 0.0010秒\n",
+      "  総処理時間: 0.0609秒\n",
+      "GPU処理時間: 0.0614秒 (8.1 Mmsg/s)\n",
+      "CPU処理時間: 0.0490秒 (10.2 Mmsg/s)\n",
+      "高速化率: 0.8x\n",
+      "\n",
+      "--- 1,000,000 メッセージの処理 ---\n",
+      "データサイズ: 22.9 MB\n",
+      "  NumPy連結: 0.0223秒\n",
+      "  cuDF作成: 0.0481秒\n",
+      "  型変換: 0.0004秒\n",
+      "  フィルタリング: 0.0014秒\n",
+      "  16bit復元: 0.0031秒\n",
+      "  結果DataFrame: 0.0176秒\n",
+      "  ソート: 0.0010秒\n",
+      "  総処理時間: 0.0940秒\n",
+      "GPU処理時間: 0.0947秒 (10.6 Mmsg/s)\n",
+      "CPU処理時間: 0.0981秒 (10.2 Mmsg/s)\n",
+      "高速化率: 1.0x\n",
+      "\n",
+      "--- 5,000,000 メッセージの処理 ---\n",
+      "データサイズ: 114.4 MB\n",
+      "  NumPy連結: 0.1073秒\n",
+      "  cuDF作成: 0.2431秒\n",
+      "  型変換: 0.0006秒\n",
+      "  フィルタリング: 0.0016秒\n",
+      "  16bit復元: 0.0032秒\n",
+      "  結果DataFrame: 0.0200秒\n",
+      "  ソート: 0.0011秒\n",
+      "  総処理時間: 0.3771秒\n",
+      "GPU処理時間: 0.3790秒 (13.2 Mmsg/s)\n",
+      "CPU処理時間: 0.4904秒 (10.2 Mmsg/s)\n",
+      "高速化率: 1.3x\n",
+      "\n",
+      "--- 10,000,000 メッセージの処理 ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# デコーダーの初期化\n",
+    "optimized_gpu_decoder = OptimizedGPUCANDecoder(batch_size=500_000, chunk_size=1)\n",
+    "cpu_decoder = CPUCANDecoder(batch_size=100_000)\n",
+    "\n",
+    "# ベンチマーク結果格納\n",
+    "benchmark_results = []\n",
+    "\n",
+    "for n_messages in test_sizes:\n",
+    "    print(f\"\\n--- {n_messages:,} メッセージの処理 ---\")\n",
+    "    \n",
+    "    # データ生成\n",
+    "    timestamps, addresses, data_bytes = generate_synthetic_can_data(n_messages)\n",
+    "    data_size_mb = (timestamps.nbytes + addresses.nbytes + data_bytes.nbytes) / (1024**2)\n",
+    "    print(f\"データサイズ: {data_size_mb:.1f} MB\")\n",
+    "    \n",
+    "    # GPU処理（最適化）\n",
+    "    opt_gpu_start = time.time()\n",
+    "    opt_gpu_chunk_results = optimized_gpu_decoder.decode_batch(timestamps, addresses, data_bytes)\n",
+    "    opt_gpu_time = time.time() - opt_gpu_start\n",
+    "    \n",
+    "    # CPU処理（大きいデータは時間がかかるため制限）\n",
+    "    if n_messages <= 100_000:\n",
+    "        cpu_start = time.time()\n",
+    "        cpu_results = cpu_decoder.decode_batch(timestamps, addresses, data_bytes)\n",
+    "        cpu_time = time.time() - cpu_start\n",
+    "    else:\n",
+    "        # 線形推定\n",
+    "        cpu_time = benchmark_results[-1]['cpu_time'] * (n_messages / benchmark_results[-1]['n_messages'])\n",
+    "    \n",
+    "    # 結果記録\n",
+    "    result = {\n",
+    "        'n_messages': n_messages,\n",
+    "        'data_size_mb': data_size_mb,\n",
+    "        'opt_gpu_time': opt_gpu_time,\n",
+    "        'cpu_time': cpu_time,\n",
+    "        'speedup': cpu_time / opt_gpu_time,\n",
+    "        'opt_gpu_throughput': n_messages / opt_gpu_time / 1e6,\n",
+    "        'cpu_throughput': n_messages / cpu_time / 1e6\n",
+    "    }\n",
+    "    benchmark_results.append(result)\n",
+    "    \n",
+    "    print(f\"GPU処理時間: {opt_gpu_time:.4f}秒 ({result['opt_gpu_throughput']:.1f} Mmsg/s)\")\n",
+    "    print(f\"CPU処理時間: {cpu_time:.4f}秒 ({result['cpu_throughput']:.1f} Mmsg/s)\")\n",
+    "    print(f\"高速化率: {result['speedup']:.1f}x\")\n",
+    "\n",
+    "# DataFrameに変換\n",
+    "benchmark_df = pd.DataFrame(benchmark_results)\n",
+    "benchmark_df"
+   ]
   },
   {
    "cell_type": "markdown",
