Add GPU profiling benchmark notebook with detailed monitoring and analysis
- Introduced a new Jupyter notebook for benchmarking CAN data processing on GPU.
- Implemented GPU utilization and memory monitoring using pynvml.
- Created a GPUMonitor class for real-time GPU usage tracking.
- Set up RMM memory profiling and statistics collection.
- Developed synthetic CAN data generation function with profiling.
- Executed benchmarks for GPU and CPU processing with detailed results.
- Included visualizations for performance metrics and memory usage.
- Added performance bottleneck analysis and optimization recommendations.
- Provided detailed RMM profiling results and final memory state checks.

--- a/old_notebooks/can_gpu_benchmark_fixed_old.ipynb
+++ b/old_notebooks/can_gpu_benchmark_fixed_old.ipynb
@@ -45,32 +45,11 @@
     "sys.path.append('..')\n",
     "\n",
     "# Import decoders\n",
-    "#from gpu_can_decoder import GPUCANDecoder\n",
+    "from gpu_can_decoder import GPUCANDecoder\n",
     "from gpu_can_decoder_optimized import OptimizedGPUCANDecoder\n",
     "from cpu_can_decoder import CPUCANDecoder\n",
     "\n",
     "print(\"ライブラリのインポート完了\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b7e78b41-1928-4609-bb85-bf07709711b8",
-   "metadata": {},
-   "source": [
-    "## アドレス毎の分類とデータ増幅\n",
-    "  アドレス170は、CANバスにおける特定のメッセージIDで、車両の4輪速度データを送信するために使用されます。\n",
-    "\n",
-    "  CANバスでは、各メッセージに固有のアドレス（ID）が割り当てられており、これにより受信側がメッセージの種類を識別できます。\n",
-    "\n",
-    "  アドレス170のデータ構造\n",
-    "\n",
-    "  アドレス170のメッセージ（8バイト）:\n",
-    "  ┌────────┬────────┬────────┬────────┬────────┬────────┬────────┬────────┐\n",
-    "  │ byte0  │ byte1  │ byte2  │ byte3  │ byte4  │ byte5  │ byte6  │ byte7  │\n",
-    "  ├────────┴────────┼────────┴────────┼────────┴────────┼────────┴────────┤\n",
-    "  │   前左輪速度    │   前右輪速度    │   後左輪速度    │   後右輪速度    │\n",
-    "  │    (16bit)      │    (16bit)      │    (16bit)      │    (16bit)      │\n",
-    "  └─────────────────┴─────────────────┴─────────────────┴─────────────────┘"
    ]
   },
   {
@@ -180,75 +159,81 @@
       "\n",
       "--- 10,000 メッセージの処理 ---\n",
       "データサイズ: 0.2 MB\n",
-      "  CPU事前フィルタリング: 0.0000秒\n",
+      "  CPU事前フィルタリング: 0.0001秒\n",
       "  データ抽出: 0.0000秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0002秒\n",
-      "  cuDF作成（計算済み）: 0.0040秒\n",
-      "  ソート: 0.0343秒\n",
-      "  総処理時間: 0.0386秒\n",
-      "GPU処理時間: 0.0387秒 (0.3 Mmsg/s)\n",
-      "CPU処理時間: 0.0023秒 (4.4 Mmsg/s)\n",
-      "高速化率: 0.1x\n",
+      "  cuDF作成: 0.0048秒\n",
+      "  16bit復元: 0.0208秒\n",
+      "  結果DataFrame: 0.0094秒\n",
+      "  ソート: 0.0314秒\n",
+      "  総処理時間: 0.0666秒\n",
+      "GPU処理時間: 0.0666秒 (0.2 Mmsg/s)\n",
+      "CPU処理時間: 0.0031秒 (3.2 Mmsg/s)\n",
+      "高速化率: 0.0x\n",
       "\n",
       "--- 50,000 メッセージの処理 ---\n",
       "データサイズ: 1.1 MB\n",
-      "  CPU事前フィルタリング: 0.0001秒\n",
+      "  CPU事前フィルタリング: 0.0002秒\n",
       "  データ抽出: 0.0000秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0001秒\n",
-      "  cuDF作成（計算済み）: 0.0012秒\n",
+      "  cuDF作成: 0.0017秒\n",
+      "  16bit復元: 0.0034秒\n",
+      "  結果DataFrame: 0.0026秒\n",
       "  ソート: 0.0008秒\n",
-      "  総処理時間: 0.0022秒\n",
-      "GPU処理時間: 0.0023秒 (22.2 Mmsg/s)\n",
-      "CPU処理時間: 0.0051秒 (9.9 Mmsg/s)\n",
-      "高速化率: 2.2x\n",
+      "  総処理時間: 0.0088秒\n",
+      "GPU処理時間: 0.0088秒 (5.7 Mmsg/s)\n",
+      "CPU処理時間: 0.0055秒 (9.1 Mmsg/s)\n",
+      "高速化率: 0.6x\n",
       "\n",
       "--- 100,000 メッセージの処理 ---\n",
       "データサイズ: 2.3 MB\n",
       "  CPU事前フィルタリング: 0.0002秒\n",
       "  データ抽出: 0.0001秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0001秒\n",
-      "  cuDF作成（計算済み）: 0.0013秒\n",
+      "  cuDF作成: 0.0016秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0026秒\n",
       "  ソート: 0.0008秒\n",
-      "  総処理時間: 0.0025秒\n",
-      "GPU処理時間: 0.0025秒 (39.3 Mmsg/s)\n",
-      "CPU処理時間: 0.0093秒 (10.8 Mmsg/s)\n",
-      "高速化率: 3.7x\n",
+      "  総処理時間: 0.0086秒\n",
+      "GPU処理時間: 0.0087秒 (11.6 Mmsg/s)\n",
+      "CPU処理時間: 0.0098秒 (10.2 Mmsg/s)\n",
+      "高速化率: 1.1x\n",
       "\n",
       "--- 500,000 メッセージの処理 ---\n",
       "データサイズ: 11.4 MB\n",
-      "  CPU事前フィルタリング: 0.0005秒\n",
-      "  データ抽出: 0.0006秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0002秒\n",
-      "  cuDF作成（計算済み）: 0.0018秒\n",
-      "  ソート: 0.0009秒\n",
-      "  総処理時間: 0.0040秒\n",
-      "GPU処理時間: 0.0040秒 (124.0 Mmsg/s)\n",
-      "CPU処理時間: 0.0465秒 (10.8 Mmsg/s)\n",
-      "高速化率: 11.5x\n",
+      "  CPU事前フィルタリング: 0.0006秒\n",
+      "  データ抽出: 0.0007秒\n",
+      "  cuDF作成: 0.0018秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0026秒\n",
+      "  ソート: 0.0010秒\n",
+      "  総処理時間: 0.0101秒\n",
+      "GPU処理時間: 0.0101秒 (49.4 Mmsg/s)\n",
+      "CPU処理時間: 0.0492秒 (10.2 Mmsg/s)\n",
+      "高速化率: 4.9x\n",
       "\n",
       "--- 1,000,000 メッセージの処理 ---\n",
       "データサイズ: 22.9 MB\n",
-      "  CPU事前フィルタリング: 0.0011秒\n",
+      "  CPU事前フィルタリング: 0.0012秒\n",
       "  データ抽出: 0.0015秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0013秒\n",
-      "  cuDF作成（計算済み）: 0.0023秒\n",
+      "  cuDF作成: 0.0021秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0026秒\n",
       "  ソート: 0.0009秒\n",
-      "  総処理時間: 0.0071秒\n",
-      "GPU処理時間: 0.0072秒 (139.5 Mmsg/s)\n",
-      "CPU処理時間: 0.0930秒 (10.8 Mmsg/s)\n",
-      "高速化率: 13.0x\n",
+      "  総処理時間: 0.0116秒\n",
+      "GPU処理時間: 0.0117秒 (85.7 Mmsg/s)\n",
+      "CPU処理時間: 0.0984秒 (10.2 Mmsg/s)\n",
+      "高速化率: 8.4x\n",
       "\n",
       "--- 5,000,000 メッセージの処理 ---\n",
       "データサイズ: 114.4 MB\n",
-      "  CPU事前フィルタリング: 0.0057秒\n",
-      "  データ抽出: 0.0076秒\n",
-      "  CPU事前計算（16bit復元+速度変換）: 0.0017秒\n",
-      "  cuDF作成（計算済み）: 0.0160秒\n",
-      "  ソート: 0.0010秒\n",
-      "  総処理時間: 0.0321秒\n",
-      "GPU処理時間: 0.0322秒 (155.4 Mmsg/s)\n",
-      "CPU処理時間: 0.4649秒 (10.8 Mmsg/s)\n",
-      "高速化率: 14.4x\n",
+      "  CPU事前フィルタリング: 0.0059秒\n",
+      "  データ抽出: 0.0079秒\n",
+      "  cuDF作成: 0.0135秒\n",
+      "  16bit復元: 0.0033秒\n",
+      "  結果DataFrame: 0.0027秒\n",
+      "  ソート: 0.0009秒\n",
+      "  総処理時間: 0.0343秒\n",
+      "GPU処理時間: 0.0344秒 (145.5 Mmsg/s)\n",
+      "CPU処理時間: 0.4918秒 (10.2 Mmsg/s)\n",
+      "高速化率: 14.3x\n",
       "\n",
       "--- 10,000,000 メッセージの処理 ---\n"
      ]
