--- a/old_notebooks/can_gpu_profiling_benchmark.ipynb
+++ b/old_notebooks/can_gpu_profiling_benchmark.ipynb
@@ -629,7 +629,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -643,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
